--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ figcaption {
 
 .slide .container {
   background-color: rgba(255, 255, 255, 0.623);
-  color: #5267D9;
+  color: #000;
   padding: 22px;
   font-family: 'Roboto Condensed', sans-serif;
   border-radius: 10px;
@@ -150,10 +150,8 @@ figcaption {
 }
 
 .slide .container.corner{
-  top: 10%;
-  left: 10%;
-  transform: translateX(-10%) translateY(-10%);
-  width: auto;
+  max-width: 80%;
+  margin: 0 auto;
 }
 
 .slide.white .container {
@@ -179,6 +177,11 @@ div.icon.right{
   margin: 0 0 10px 10px;
 }
 
+.audioPlayer{
+  width: 100%;
+  height: 75px;
+}
+
 /*********************************************************************
   YOUR TABLET/DESKTOP STYLES GO HERE
 *********************************************************************/
@@ -191,6 +194,13 @@ div.icon.right{
 
   .mobile {
     display: none;
+  }
+
+  .slide .container.corner{
+    top: 10%;
+    left: 23%;
+    transform: translateX(-10%) translateY(-10%);
+    width: auto;
   }
 }
 /*********************************************************************
